force-app/main/default/objects/Loan__c/fields/Days_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Due__c</fullName>
    <formula>IF(AND(ISPICKVAL(Status__c, &quot;Active&quot;), TODAY() &gt; Maturity_Date__c), TODAY() - Maturity_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>