force-app/main/default/objects/Loan__c/fields/Insurance_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Snapshot__c</fullName>
    <label>Insurance Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>