force-app/main/default/objects/Loan__c/fields/LivingSpring_Branch__c.field-meta.xml
<CustomField>
    <fullName>LivingSpring_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LivingSpring Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <type>Lookup</type>
</CustomField>