force-app/main/default/objects/Loan__c/fields/Origination_Fee_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Snapshot__c</fullName>
    <label>Origination Fee Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>