force-app/main/default/objects/Loan__c/fields/Product_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Snapshot__c</fullName>
    <label>Product Name Snapshot</label>
    <type>TextArea</type>
</CustomField>