force-app/main/default/objects/Loan__c/fields/Rate_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Rate_Snapshot__c</fullName>
    <label>Rate Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>