force-app/main/default/objects/Loan__c/fields/Tenor__c.field-meta.xml
<CustomField>
    <fullName>Tenor__c</fullName>
    <label>Tenor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>