force-app/main/default/objects/Loan__c/validationRules/LS_Active_Current_DPD_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_Active_Current_DPD_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Active&quot;),
  Days_Past_Due__c &gt; 0
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Use In Arrears status when Days Past Due is greater than 0.</errorMessage>
</ValidationRule>