force-app/main/default/objects/Loan__c/validationRules/LS_Arrears_Must_Have_DPD.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_Arrears_Must_Have_DPD</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;In Arrears&quot;),
  OR(
    ISBLANK(Days_Past_Due__c),
    Days_Past_Due__c &lt;= 0
  )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Loans in arrears must have Days Past Due greater than 0.</errorMessage>
</ValidationRule>