force-app/main/default/objects/Loan__c/validationRules/LS_Disbursement_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_Disbursement_Date_Not_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Disbursement_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Disbursement_Date__c</errorDisplayField>
    <errorMessage>Disbursement date cannot be in the future.</errorMessage>
</ValidationRule>