force-app/main/default/objects/Loan__c/validationRules/LS_Outstanding_Balance_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_Outstanding_Balance_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Outstanding_Balance__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Outstanding_Balance__c</errorDisplayField>
    <errorMessage>Outstanding_Balance__c &lt; 0</errorMessage>
</ValidationRule>