force-app/main/default/objects/Loan__c/validationRules/LS_Outstanding_Not_Greater_Than_Principa.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_Outstanding_Not_Greater_Than_Principa</fullName>
    <active>true</active>
    <errorConditionFormula>Outstanding_Balance__c &gt; Principal__c</errorConditionFormula>
    <errorDisplayField>Outstanding_Balance__c</errorDisplayField>
    <errorMessage>Outstanding balance cannot exceed principal for this Phase 1 demo loan book.</errorMessage>
</ValidationRule>