force-app/main/default/objects/Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Product__c</columns>
    <columns>Loan_Application__c</columns>
    <columns>LivingSpring_Branch__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>