force-app/main/default/objects/Loan__c/listViews/All_Active_Loans.listView-meta.xml
<ListView>
    <fullName>All_Active_Loans</fullName>
    <columns>NAME</columns>
    <columns>Principal__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Maturity_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Active Loans</label>
</ListView>