force-app/main/default/objects/Loan__c/listViews/Approved_Awaiting_Disbursement.listView-meta.xml
<ListView>
    <fullName>Approved_Awaiting_Disbursement</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Principal__c</columns>
    <columns>Disbursement_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Approved Awaiting Disbursement</label>
</ListView>