force-app/main/default/objects/Loan__c/listViews/Full_Loan_Book.listView-meta.xml
<ListView>
    <fullName>Full_Loan_Book</fullName>
    <columns>NAME</columns>
    <columns>Principal__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Status__c</columns>
    <columns>Days_Past_Due__c</columns>
    <columns>Maturity_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>Full Loan Book</label>
</ListView>