force-app/main/default/objects/Loan__c/listViews/Large_Exposures.listView-meta.xml
<ListView>
    <fullName>Large_Exposures</fullName>
    <columns>NAME</columns>
    <columns>Principal__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Disbursement_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Large Exposures</label>
</ListView>