force-app/main/default/objects/Loan__c/listViews/My_Loan_Book.listView-meta.xml
<ListView>
    <fullName>My_Loan_Book</fullName>
    <columns>NAME</columns>
    <columns>Principal__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Maturity_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Loan Book</label>
</ListView>