force-app/main/default/objects/Loan__c/listViews/My_Overdue_Loans.listView-meta.xml
<ListView>
    <fullName>My_Overdue_Loans</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Overdue Loans</label>
</ListView>