force-app/main/default/objects/Loan__c/listViews/PAR_30_Portfolio.listView-meta.xml
<ListView>
    <fullName>PAR_30_Portfolio</fullName>
    <columns>NAME</columns>
    <columns>Principal__c</columns>
    <columns>Outstanding_Balance__c</columns>
    <columns>Days_Past_Due__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>PAR 30 Portfolio</label>
</ListView>